add commons pool

--- a/lib/nblibraries.properties
+++ b/lib/nblibraries.properties
@@ -1,3 +1,8 @@
+libs.commons-pool2.classpath=\
+    ${base}/commons-pool2/commons-pool2-2.4.2.jar
+libs.commons-pool2.displayName=commons-pool2
+libs.commons-pool2.src=\
+    ${base}/commons-pool2/commons-pool2-2.4.2-sources.jar!//
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
 libs.CopyLibs.displayName=CopyLibs Task
